<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="@dimen/sp_30"
        tools:text="@string/app_name"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/colorAccent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/today_tomato_data"
            android:textColor="@color/white"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/div_line"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tomato_num"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/tv_tomato_num"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_30"
                    android:textStyle="bold"/>
            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tomato_time"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/tv_tomato_time"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_30"
                    android:textStyle="bold"/>
            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>