<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/huolieniao"
    android:orientation="vertical">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/gif_bird" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fam"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_backgroundColor="#aaffffff"
        fab:menu_icon="@drawable/icon_edit_diary"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="@color/colorPrimary"
        fab:menu_colorRipple="@color/colorPrimaryDark"
        >

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_diary"
            fab:menu_colorNormal="@color/colorPrimary"
            fab:menu_colorPressed="@color/colorPrimary"
            fab:menu_colorRipple="@color/colorPrimaryDark"
            fab:fab_size="mini"
            fab:fab_label="@string/diary" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_todo"
            fab:menu_colorNormal="@color/colorPrimary"
            fab:menu_colorPressed="@color/colorPrimary"
            fab:menu_colorRipple="@color/colorPrimaryDark"
            fab:backgroundTint="@color/colorPrimary"
            fab:fab_size="mini"
            fab:fab_label="@string/title_todo" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_anniversary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_anniversary"
            fab:menu_colorNormal="@color/colorPrimary"
            fab:menu_colorPressed="@color/colorPrimary"
            fab:menu_colorRipple="@color/colorPrimaryDark"
            fab:fab_size="mini"
            fab:fab_label="@string/title_anniversary" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>